--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -115,7 +115,6 @@ android {
             signingConfig signingConfigs.release
             applicationIdSuffix ".beta"
         }
-
         release {
             signingConfig signingConfigs.release
             minifyEnabled true
@@ -145,7 +144,7 @@ android {
         externalNativeBuild {
             cmake {
                 version '3.10.2'
-                arguments '-DANDROID_STL=c++_static', '-DANDROID_PLATFORM=android-21', "-DNDK_CCACHE=ccache"
+                arguments '-DANDROID_STL=c++_static', '-DANDROID_PLATFORM=android-21' // , "-DNDK_CCACHE=ccache"
             }
         }
     }
