--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,11 @@
-include ':TMessagesProj'
-include ':lspatch'
+include ':TMessagesProj', ':lspatch'
+include ':daemon-service'
+project(':daemon-service').projectDir = new File('core/daemon-service')
+include ':hiddenapi-stubs'
+project(':hiddenapi-stubs').projectDir = new File('core/hiddenapi-stubs')
+include ':hiddenapi-bridge'
+project(':hiddenapi-bridge').projectDir = new File('core/hiddenapi-bridge')
+include ':manager-service'
+project(':manager-service').projectDir = new File('core/manager-service')
+include ':interface'
+project(':interface').projectDir = new File('core/service/interface')
