--- a/lspatch/build.gradle
+++ b/lspatch/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -20,16 +19,12 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
-    implementation project(path: ':daemon-service')
-    implementation project(path: ':hiddenapi-bridge')
+    implementation 'de.upb.cs.swt:axml:2.1.1'
     compileOnly project(":hiddenapi-stubs")
 }
