--- a/TMessagesProj/src/lspatch/AndroidManifest.xml
+++ b/TMessagesProj/src/lspatch/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="icu.ketal.yunigram.lspatch">
+    package="icu.ketal.yunigram.org.lsposed.lspatch.lspatch">
 
     <application
         tools:replace="android:appComponentFactory"
-        android:appComponentFactory="org.lsposed.lspatch.appstub.LSPAppComponentFactoryStub" />
+        android:appComponentFactory="org.lsposed.org.lsposed.lspatch.lspatch.appstub.LSPAppComponentFactoryStub" />
 
 </manifest>
