--- a/imanager/src/main/AndroidManifest.xml
+++ b/imanager/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="org.lsposed.org.lsposed.lspatch.lspatch.manager" />
+<manifest package="org.lsposed.lspatch.manager" />
