--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=false
 android.useAndroidX=true
-android.enableJetifier=true
+#android.enableJetifier=true
 android.enableR8.fullMode=true
 android.enableAppCompileTimeRClass=true
 android.nonTransitiveRClass=true
