--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -174,6 +174,8 @@ android {
     }
 
     dependenciesInfo.includeInApk false
+
+    sourceSets["main"].assets.srcDirs("${rootProject.projectDir}/out/assets")
 }
 
 dependencies {
@@ -193,4 +195,13 @@ def patchBundleReleaseManifest = task('patchBundleReleaseManifest').doLast {
 
 afterEvaluate {
     tasks.getByName("processApplicationManifestNormalReleaseForBundle").finalizedBy patchBundleReleaseManifest
+
+    android.applicationVariants.all { variant ->
+        def flavor = variant.flavorName
+        def buildType = variant.buildType.name.capitalize()
+
+        if (flavor == "lspatch") {
+            variant.getMergeAssetsProvider().get().dependsOn(":app:copyRiru${buildType}")
+        }
+    }
 }
