--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -55,7 +55,7 @@ ext.abiCodes = ['armeabi-v7a':1, 'arm64-v8a':5, x86:2, x86_64:6, 'universal':9]
 
 android {
     compileSdkVersion 32
-    buildToolsVersion '32.0.0'
+    buildToolsVersion '32.1.0-rc1'
     ndkVersion "21.4.7075529"
 
     defaultConfig.applicationId = "icu.ketal.yunigram"
@@ -179,7 +179,7 @@ android {
 }
 
 dependencies {
-    lspatchImplementation 'de.upb.cs.swt:axml:2.1.1'
+    lspatchImplementation 'de.upb.cs.swt:axml:2.1.2'
     lspatchCompileOnly project(":hiddenapi-stubs")
 }
 
