fix lspd wrong path and no noCompress lspd.so
Signed-off-by: keta1 <k@ketal.icu>

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -176,6 +176,10 @@ android {
     dependenciesInfo.includeInApk false
 
     sourceSets["main"].assets.srcDirs("${rootProject.projectDir}/out/assets")
+
+    aaptOptions {
+        noCompress 'liblspd.so'
+    }
 }
 
 dependencies {
