--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -152,7 +152,8 @@ android {
         externalNativeBuild {
             cmake {
                 version '3.10.2'
-                arguments '-DANDROID_STL=c++_static', '-DANDROID_PLATFORM=android-21', "-DNDK_CCACHE=ccache"
+                arguments '-DANDROID_STL=c++_static', '-DANDROID_PLATFORM=android-21', "-DCMAKE_C_COMPILER_LAUNCHER=ccache" , "-DCMAKE_CXX_COMPILER_LAUNCHER=ccache", "-DNDK_CCACHE=ccache", "-j=16"
+
             }
         }
     }
